Refacto css fixes and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ main {
 }
 
 h1 {
-  font-size: 0.2rem;
+  font-size: 0.8rem;
   padding: 0.5rem;
 
   @media (min-width: 321px) {
@@ -84,7 +84,6 @@ h1 {
       font-size: 1rem;
     }
 
-
     img {
       width: 150px;
     }
@@ -102,7 +101,11 @@ footer {
   display: flex;
   justify-content: center;
   border-top: 1px solid black;
-  width: 60%;
+  width: 80%;
   margin: 0 auto;
   font-size: 0.8rem;
+
+  @media (prefers-color-scheme: dark) {
+    border-top: 1px solid white;
+  }
 }
